<resources>
    <string name="app_name">FamousMovies</string>
    <string name="error_message_list">An error occurred while listing data</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="favorites">Favorites</string>
    <string name="content_description_img_ivBackdrop">Backdrop image from movie</string>
    <string name="content_description_img_ivPoster">Poster image from movie</string>
    <string name="content_description_img_offline">Error image reporting without internet</string>

    <string name="offline">Offline</string>
    <string name="offline_msg">Check your internet connection and try again.</string>

    <string name="offline_no_internet">Without internet?</string>
    <string name="offline_no_internet_retry">Retry again</string>

    <!-- detail -->
    <string name="detail_menu_share">Share trailer</string>

    <string name="detail_subtitle_overview">Overview</string>
    <string name="detail_subtitle_reviews">Reviews</string>
    <string name="detail_subtitle_trailers">Trailers</string>
    <string name="detail_data_not_found">Data not found</string>


    <string name="content_description_img_ivTrailer">Trailer image</string>
</resources>
