<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- image of movies -->
        <ImageView
            android:id="@+id/ivBackdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/content_description_img_ivBackdrop"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- thumb, name, rate, date-->
        <ImageView
            android:id="@+id/ivPoster"
            style="@style/Poster"
            android:contentDescription="@string/content_description_img_ivPoster"
            app:layout_constraintStart_toStartOf="@+id/ivBackdrop"
            app:layout_constraintTop_toBottomOf="@+id/ivBackdrop" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivPoster"
            app:layout_constraintTop_toBottomOf="@+id/ivBackdrop" />

        <TextView
            android:id="@+id/tvRelease"
            style="@style/WhiteText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            app:layout_constraintStart_toEndOf="@+id/ivPoster"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


        <TextView
            android:id="@+id/tvVoteAverage"
            style="@style/VoteAverage.80"
            app:layout_constraintBottom_toBottomOf="@+id/btFavorite"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvOverview"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverViewSubtitle" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvTrailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTrailerSubtitle" />

        <ProgressBar
            android:id="@+id/pbTrailer"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/rvTrailers"
            app:layout_constraintEnd_toEndOf="@+id/rvTrailers"
            app:layout_constraintStart_toStartOf="@+id/rvTrailers"
            app:layout_constraintTop_toTopOf="@+id/rvTrailers"
            tools:visibility="invisible" />

        <ProgressBar
            android:id="@+id/pbReview"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/rvReviews"
            app:layout_constraintEnd_toEndOf="@+id/rvReviews"
            app:layout_constraintStart_toStartOf="@+id/rvReviews"
            app:layout_constraintTop_toTopOf="@+id/rvReviews"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/tvOverViewSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/detail_subtitle_overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPoster" />

        <TextView
            android:id="@+id/tvTrailerSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/detail_subtitle_trailers"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/detail_subtitle_reviews"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvTrailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvReviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/btFavorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:onClick="onClickFavorite"
            android:src="@drawable/ic_favorite_border_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
            app:layout_constraintStart_toEndOf="@+id/ivPoster" />

        <TextView
            android:id="@+id/tvNfDataTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_data_not_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/tvTrailerSubtitle"
            app:layout_constraintStart_toStartOf="@+id/tvTrailerSubtitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTrailerSubtitle" />

        <TextView
            android:id="@+id/tvNfDataReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/detail_data_not_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/rvReviews" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>
